--- a/index.html
+++ b/index.html
@@ -8,28 +8,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="App.css">
-    
     <style>
-        /* إعدادات إضافية لضمان ثبات القوائم وتجربة مستخدم سلسة */
         body {
             margin: 0;
             padding: 0;
             background-color: #fcfcfc;
             font-family: 'Tajawal', 'Cairo', sans-serif;
-            overflow-x: hidden; /* منع التمرير العرضي */
-            -webkit-tap-highlight-color: transparent; /* إزالة لون التحديد عند الضغط في الموبايل */
+            overflow-x: hidden;
+            -webkit-tap-highlight-color: transparent;
         }
-
         #root {
             display: flex;
             flex-direction: column;
             min-height: 100vh;
-        }
-
-        /* تنسيق لتحسين ظهور الأيقونات والرموز التعبيرية */
-        .icon, .nav-icon {
-            font-family: "Segoe UI Emoji", "Apple Color Emoji", "Noto Color Emoji", sans-serif;
         }
     </style>
 </head>
