--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>تطبيق رؤاقة - النسخة النسائية</title>
+    <title>تطبيق رقة - النسخة النسائية</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
     
     <style>
-        /* إعدادات أساسية لضمان عدم حدوث فراغات بيضاء وتناسق الخطوط */
+        /* إعدادات أساسية لضمان تناسق الواجهة */
         body {
             margin: 0;
             padding: 0;
@@ -29,7 +29,7 @@
 
     <div id="root"></div>
 
-    <script type="module" src="src/main.jsx"></script>
+    <script type="module" src="/public/main.jsx"></script>
 
 </body>
 </html>
